--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Todo</a>
+        <a class="navbar-brand" >Expense Tracker</a>
     </div>
 </div>
 
@@ -8,26 +8,28 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        @* <div class="nav-item px-3">
-        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-        </NavLink>
-        </div> *@
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="register">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Register
+            <NavLink class="nav-link" href="dashboard" Match="NavLinkMatch.All">
+                Dashboard
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
+            <NavLink class="nav-link" href="transactions" Match="NavLinkMatch.All">
+                Transactions
             </NavLink>
         </div>
-        @* <div class="nav-item px-3">
-        <NavLink class="nav-link" href="weather">
-        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-        </NavLink>
-        </div> *@
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="add-transaction" Match="NavLinkMatch.All">
+                Add Transactions
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logout" Match="NavLinkMatch.All">
+                Logout
+            </NavLink>
+        </div>
+
+        
 
     </nav>
 </div>
