added registration css

--- a/Components/Pages/Register.razor
+++ b/Components/Pages/Register.razor
@@ -88,7 +88,7 @@
             }
 
     .error-message {
-        color: red;
+        color: deeppink;
         text-align: center;
         margin-top: 10px;
     }
